--- a/index.css
+++ b/index.css
@@ -195,9 +195,9 @@ body {
         gap: 10px;
     }
     
-    .detail-item {
+    /* .detail-item {
         min-width: calc(50% - 10px);
-    }
+    } */
 }
 
 @media (max-width: 400px) {
@@ -210,7 +210,7 @@ body {
         border-radius: 30px;
     }
     
-    .detail-item {
+    /* .detail-item {
         min-width: 100%;
-    }
+    } */
 }
